2007-09-25  Dustin J. Mitchell <dustin@zmanda.com>
	* Makefile.am config/Makefile.am config/ax_create_stdint_h.m4i
	  autogen configure.in: remove AX_CREATE_STDINT_H
	* configure.in: add system-specific glib configuration
	* changer-src/scsi-cam.c device-src/device.c
	  device-src/device.h device-src/tests/device_test.c
	  device-src/rait-device.c server-src/amcheck.c
	  server-src/taper.c server-src/amlabel.c
	  restore-src/amrestore.c restore-src/restore.c
	  common-src/glib-util.c common-src/security-util.c
	  common-src/amanda.h common-src/krb4-security.c:
	  replace references to stdint types and defines with glib
	  equivalents

2007-09-25  Ian Turner <ian@zmanda.com> (merged by dustin@zmanda.com)
	* device-src/s3.c, device-src/tape-device.c,
	  device-src/rait-device.c: Fix a number of compiler warnings, some
	  legimate, others not. Thanks to Dustin J. Mitchell
	  <dustin@zmanda.com> and Jean-Louis Martineau <martineau@zmanda.com>
	  for help identifying warnings that need fixing.

2007-09-25  Dustin J. Mitchell <dustin@zmanda.com>
	* man/xml-source/amcleanup.8.xml server-src/amcleanupdisk.c
	  server-src/amcleanup.sh.in: add -v option for verbose output
	* server-src/holding.c server-src/holding.h: rewrite 
	  implementation of the holding API to use functors
	* server-src/driver.c: modifications to holding API changes

2007-09-24  Ian Turner <ian@zmanda.com> (merged by dustin@zmanda.com)
	* device-src/device.c: Suppress a compiler warning.

2007-09-24  Ian Turner <ian@zmanda.com> (merged by dustin@zmanda.com)
	* device-src/device.h, device-src/device.c, device-src/fd-device.c,
	  device-src/tape-device.c, device-src/vfs-device.c,
	  device-src/rait-device.c: Update the seek_file API skip missing
	  files. Thanks to Dustin J. Mitchell <dustin@zmanda.com> and
	  Jean-Louis Martineau <martineau@zmanda.com> for help with this patch.
	* restore-src/restore.c: Use the new API.

2007-09-24  Ian Turner <ian@zmanda.com> (merged by dustin@zmanda.com)